Fix styles for overflow

--- a/src/app/shared/footer/footer.component.css
+++ b/src/app/shared/footer/footer.component.css
@@ -1,8 +1,6 @@
 :host {
     background-color: #e1e1e1;
     text-align: center;
-    position: absolute;
-    bottom: 0;
     width: 100%;
     font-family: 'HelveticaNeueRoman','Helvetica Neue, Helvetica, Arial', sans-serif;
     font-size: 12px;
